# HyperXTools

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  hyperx-hid-protocol.md
.github/workflows/: release.yml
scripts/: generate_installer_images.py
src/: audio.rs  autostart.rs  config.rs  hid.rs  icon.rs  main.rs  mic_picker.rs  tray.rs  updater.rs
wix/: License.rtf  main.wxs
