[package]
name = "hyperxtools"
version = "0.1.0"
edition = "2024"
description = "System tray app for HyperX Cloud Alpha Wireless headset control via HID"
license = "MIT"

[dependencies]
hidapi = "2.6"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
]

[[bin]]
name = "hid_logger"
path = "src/bin/hid_logger.rs"

[profile.release]
lto = true
strip = true
opt-level = "s"
