[package]
name = "hyperxtools"
version = "1.0.0"
edition = "2024"
description = "System tray app for HyperX Cloud Alpha Wireless headset control via HID"
authors = ["LuMa"]
license = "MIT"

[dependencies]
hidapi = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = "3"
semver = "1"
sha2 = "0.10"
com-policy-config = "0.6"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
]

[[bin]]
name = "hid_logger"
path = "src/bin/hid_logger.rs"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
opt-level = "s"
